--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,9 @@
 	.btn {
 		@apply bg-blue-200 text-black p-2 rounded-md;
 	}
+	.btn:disabled {
+		@apply bg-gray-200;
+	}
 
 	.link {
 		@apply underline bg-blue-50 hover:bg-blue-200 active:bg-blue-200 visited:bg-violet-50;
